# biblioteca_digital

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: database.py  db_models.py  main.py
backend/app/models/: emprestimo.py  exemplar.py  livro.py  user.py
backend/app/routers/: auth.py  auth_livro.py  busca.py  emprestimo.py  exemplar.py
backend/app/services/: auth_user.py  emprestimo_service.py  exemplar_service.py  livro_service.py
backend/app/utils/: security.py  validators.py
